--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@types/aos": "^3.0.7",
     "@types/react-scroll": "^1.8.10",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
